FIX back to top z-index

--- a/src/assets/scss/partials/_ToTop.scss
+++ b/src/assets/scss/partials/_ToTop.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 16px;
   right: 16px;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
